--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -1,1 +1,4 @@
+@import 'variables.css.scss';
 /* bootstrap overrides - http://getbootstrap.com/customize/ */
+$navbar-height:50px;
+$nav-link-hover-bg:$trans-black;
