--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,11 @@
               <%= copywriting('links', {:phrase_type => 'wysiwyg'}).html_safe %>
             <% end %>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-7">
             <%= yield %>
           </div>
           <div class="col-md-3">
-
+            <h2><a href="https://www.facebook.com/thunderroadhobbies"><i class="fa fa-facebook-square"></i> Like us on Facebook</a></h2>
           </div>
 
         </div>
