remove responsive indicator colors

--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -5,22 +5,22 @@
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  body {
-    border:3px solid red;
-  }
+  // body {
+  //   border:3px solid red;
+  // }
 
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-  body {
-    border:3px solid blue;
-  }
+  // body {
+  //   border:3px solid blue;
+  // }
 }
 
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-  body {
-    border:3px solid yellow;
-  }
+// @media (min-width: 1200px) {
+//   body {
+//     border:3px solid yellow;
+//   }
 }
