fix 1200 media query

--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -19,7 +19,7 @@
 }
 
 /* Large devices (large desktops, 1200px and up) */
-// @media (min-width: 1200px) {
+@media (min-width: 1200px) {
 //   body {
 //     border:3px solid yellow;
 //   }
