--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,4 +1,10 @@
-<p>
-  <%= t('.copyright', :year => Time.now.year,
-                      :site_name => Refinery::Core.site_name) %>
-</p>
+<div id="footer"><div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <p>
+      <%= t('.copyright', :year => Time.now.year,
+                          :site_name => Refinery::Core.site_name) %>
+      </p>
+    </div>
+  </div>
+</div></div>
