--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,8 @@
           </div>
           <div class="col-md-3">
             <h2><a href="https://www.facebook.com/thunderroadhobbies"><i class="fa fa-facebook-square"></i> Like us on Facebook</a></h2>
+            <h2>Events</h2>
+              <%= copywriting('events', {:phrase_type => 'wysiwyg'}).html_safe %>
           </div>
 
         </div>
