--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,3 +1,9 @@
+<div id="welcome">
+
+  <%= raw @page.content_for(:welcome_headline) %>
+  <%= raw @page.content_for(:intro_annoucements) %>
+
+</div>
 <div id="carousel-main" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators hidden-xs">
@@ -27,11 +33,22 @@
   </a>
 </div>
 
+<div id="home-buckets">
+  <div class="row">
+    <div class="col-md-6">
+      <%= raw @page.content_for(:home_bottom_left) %>
+    </div>
+    <div class="col-md-6">
+      <%= raw @page.content_for(:home_bottom_right) %>
+    </div>
+  </div>
+</div>
 
 
 
 
 
 
-<%= raw @page.content_for(:body) %>
+
+<%#= raw @page.content_for(:body) %>
 <%#= render '/refinery/content_page' %>
