fix type intro partial

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div id="welcome">
 
   <%= raw @page.content_for(:welcome_headline) %>
-  <%= raw @page.content_for(:intro_annoucements) %>
+  <%= raw @page.content_for(:intro_announcements) %>
 
 </div>
 <div id="carousel-main" class="carousel slide" data-ride="carousel">
