--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= render "/refinery/head" %>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
-    <meta http-equiv="X-UA-Compatible" content="IE=9">
+    <script type='text/javascript' src="assets/js/css3-mediaqueries.js"></script> 
     
   </head>
   <body id="<%= canonical_id @page %>">
