--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,16 +1,16 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-5"><!--  -->
     <h1 id='logo'>
-        <%= image_tag 'logo3.png' %>
+        <%= image_tag 'logo3.png', class: 'img-responsive' %>
         <%#= link_to Refinery::Core.site_name, refinery.root_path %>
       </h1>
     </div>
-    <div class="col-md-8 text-right">
+    <div id="header-contact"class="col-md-8 col-sm-7 col-xs-12">
       <%= copywriting_options({:scope => 'header', :phrase_type => 'wysiwyg'}) do %>
-        <h3><i class="fa fa-phone-square"></i> <%= copywriting('phone number', {:phrase_type => 'string', :default => '309-762-5295'}) %></h3>
-        <h3><i class="fa fa-envelope"></i> <%= copywriting('email', {:phrase_type => 'wysiwyg'}).html_safe %></h3>
+        <h3 id="phone"><i class="fa fa-phone-square"></i> <%= copywriting('phone number', {:phrase_type => 'string', :default => '309-762-5295'}) %></h3>
+        <h3 id="email"><i class="fa fa-envelope"></i> <%= copywriting('email', {:phrase_type => 'wysiwyg'}).html_safe %></h3>
         <p><%= copywriting('address', {:phrase_type => 'wysiwyg'}).html_safe %></p>
       <% end %>
     </div>
@@ -20,8 +20,16 @@
 <div id="nav-section">
 <div class="container">
   <div class="row">
-    <div class="col-md-12"><%= main_nav_nobg.to_html %></div>
+    <div class="col-md-12 hidden-xs"><%= render "/refinery/header_nobg" -%></div>
+    <!-- default xs nav -->
+    <div class="visible-xs"><%= render "/refinery/header_fixed_top" -%></div>
   </div>
 </div>
 </div>
 
+<%#= main_nav_nobg.to_html %>
+
+        <!-- see /refinery/headers for options for headers above xs -->
+        <!-- <div class="hidden-xs"><%#= render "/refinery/headers/header_nobg" -%></div> -->
+        <!-- default xs nav -->
+        <!-- <div class="visible-xs"><%#= render "/refinery/headers/header_fixed_top" -%></div> -->
