--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,11 @@
     <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <%= respond_include_tags %>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 
 <!--[if lt IE 9]>  
     <script src="~/Content/compatibility/html5shiv.js"></script>
     <script src="~/Content/compatibility/respond.min.js"></script>
+    <script src="assets/js/css3-mediaqueries.js"></script>
 <![endif]-->
 
     
