move css3 into ie9 conditional

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
     <%= respond_include_tags %>
 
 <!--[if lt IE 9]>  
-    <script src="~/Content/compatibility/html5shiv.js"></script>
-    <script src="~/Content/compatibility/respond.min.js"></script>
+    
+    <script src="/assets/css3-mediaqueries.js"></script>
 
 <![endif]-->
-
-  <script src="/assets/css3-mediaqueries.js"></script>
+   <!-- script src="~/Content/compatibility/respond.min.js"></script 
+        <script src="~/Content/compatibility/html5shiv.js"></script>
+    -->
+  
 
     
   </head>
