--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,1 +1,39 @@
-<%= render '/refinery/content_page' %>
+<h1><%= @page.title %></h1>
+<div id="carousel-main" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators hidden-xs">
+    <% @page.images.each_with_index do |image, index| %>
+      <li data-target="#carousel-main" data-slide-to="<%= index %>" class="<% if index == 0 %>active<% end %>"></li>
+    <% end %>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <% @page.images.each_with_index do |image, index| %>
+      <div class="item <% if index == 0 %>active<% end %>">
+        <%= image_fu(image, '750x300c') %>
+       <!--<div class="carousel-caption">
+         ...
+        </div> -->
+      </div>
+    <% end %>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-main" data-slide="prev">
+    <span class="fa fa-chevron-left" style="position:absolute;top:47%;"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-main" data-slide="next">
+    <span class="fa fa-chevron-right" style="position:absolute;top:47%;"></span>
+  </a>
+</div>
+
+<style>
+  .l2-main {
+    margin-top:20px;
+  }
+
+</style>
+<div class="l2-main"><%= @page.content_for(:body).html_safe %></div>
+<%#= render '/refinery/content_page' %>
+
