--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @page.title %></h1>
+<% if @page.images.present? %>
+
+
 <div id="carousel-main" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators hidden-xs">
@@ -27,6 +30,7 @@
     <span class="fa fa-chevron-right" style="position:absolute;top:47%;"></span>
   </a>
 </div>
+<% end %>
 
 <style>
   .l2-main {
