add trh raceway on facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,8 @@
             <%= yield %>
           </div>
           <div class="col-md-3">
-            <h2><a href="https://www.facebook.com/thunderroadhobbies"><i class="fa fa-facebook-square"></i> Like us on Facebook.</a></h2>
+            <h2><a href="https://www.facebook.com/thunderroadhobbies"><i class="fa fa-facebook-square"></i> Like us on Facebook</a></h2>
+            <h2><a href="https://www.facebook.com/pages/Thunder-Road-Raceway/816616638396419">i class="fa fa-facebook-square"></i>  Like Thunder Road Raceway on Facebook</a></h2>
             <h2>Events</h2>
               <%= copywriting('events', {:phrase_type => 'wysiwyg'}).html_safe %>
           </div>
